<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartQuestions</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_sqauthorization">SmartQuestions</string>
    <string name="ButtonEnter">Вход</string>
    <string name="ButtonRegister">Регистрация</string>

    <color name="AuthLayoutBackground">#4C5866</color>
    <color name="white">#FFFFFF</color>

    <string name="RegistrationNameString"> Name </string>
    <string name="title_activity_sqregistration">SQRegistration</string>
    <string name="RegistrationLoginString">Login </string>
    <string name="RegistrationPasswordString">Password</string>
    <string name="RegistrationTopicsString">Topics</string>
    <string name="RegistrationSendString">Send</string>
    <string name="title_activity_sqprofile">SQProfile</string>
    <string name="title">Title</string>
    <string name="topic">Topic</string>
    <string name="award">Award</string>
    <string name="timeleft">Timeleft</string>
    <string name="back">Back</string>
    <string name="show_answer">Show answer</string>
    <string name="rating">Рейтинг</string>
    <string name="exit">Выход</string>
    <string name="myAnswers">Мои ответы</string>
    <string name="myQuestions">Мои вопросы</string>
    <string name="answer">Отвечать</string>
    <string name="placeQuestion">Разместить вопрос</string>
    <string name="preferences_login_key">login</string>
    <string name="preferences_password_key">password</string>
    <string name="preferences_question_id_key">question_id</string>
    <string name="preferences_answer_id_key">answer_id</string>
    <string name="file_preferences">myPreferences</string>
    <string name="title_activity_sqplace_question">SQPlaceQuestion</string>
    <string name="placeQuestionButtonSend">Send</string>
    <string name="placeQuestionButtonBack">Back</string>
    <string name="hint_placeQuestionTitle">title</string>
    <string name="hint_placeQuestionAward">Award</string>
    <string name="hint_placeQuestionTimeout">Timeout</string>
    <string name="hint_placeQuestionText">write text of a question here</string>
    <string name="error_empty_fields">empty field</string>
    <string name="error_no_errors">fine</string>
    <string name="title_activity_sqmy_questions">SQMyQuestions</string>
    <string name="title_activity_sqquestion_browser">SQQuestionBrowser</string>
    <string name="title_activity_sqanswer">SQAnswer</string>
    <string name="accept">accept</string>
    <string name="next">Next question</string>
    <string name="hine_answer">Type answer here...</string>
    <string name="title_activity_sqanswer_browser">SQAnswerBrowser</string>
    <string name="decline">Decline</string>

</resources>