<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SQAnswer" >

    <TextView
        android:id="@+id/TextViewNickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:text="@string/RegistrationLoginString"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/TextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextViewNickname"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/TextViewAward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextViewTitle"
        android:text="@string/award"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/TextViewText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextViewAward"
        android:layout_marginTop="34dp"
        android:layout_toRightOf="@+id/TextViewTitle"
        android:maxEms="10"
        android:minEms="10"
        android:text="@string/hint_placeQuestionText"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/ButtonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/TextViewText"
        android:text="@string/next" />

    <Button
        android:id="@+id/ButtonAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/ButtonNext"
        android:text="@string/accept" />

    <Button
        android:id="@+id/ButtonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/ButtonAccept"
        android:text="@string/back" />

    <EditText
        android:id="@+id/EditTextAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ButtonNext"
        android:layout_marginBottom="54dp"
        android:layout_toRightOf="@+id/TextViewTitle"
        android:ems="10"
        android:hint="@string/hine_answer"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

</RelativeLayout>