<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SQQuestionBrowser" >

    <TextView
        android:id="@+id/TextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="40dp"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/TextViewTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/TextViewTitle"
        android:layout_below="@+id/TextViewTitle"
        android:layout_marginTop="16dp"
        android:text="@string/topic"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/TextViewAward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextViewTopic"
        android:layout_below="@+id/TextViewTopic"
        android:layout_marginTop="15dp"
        android:text="@string/award"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/TextViewTimeleft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/TextViewAward"
        android:layout_below="@+id/TextViewAward"
        android:layout_marginTop="18dp"
        android:text="@string/timeleft"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/ButtonShowAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/TextViewTimeleft"
        android:layout_below="@+id/TextViewTimeleft"
        android:layout_marginTop="29dp"
        android:text="@string/show_answer" />

    <Button
        android:id="@+id/ButtonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ButtonShowAnswer"
        android:layout_below="@+id/ButtonShowAnswer"
        android:layout_marginTop="22dp"
        android:text="@string/back" />

</RelativeLayout>