<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SQAnswerBrowser" >

    <TextView
        android:id="@+id/TextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="114dp"
        android:layout_marginTop="30dp"
        android:text="@string/title" />

    <TextView
        android:id="@+id/TextViewText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextViewTitle"
        android:layout_below="@+id/TextViewTitle"
        android:layout_marginTop="68dp" />

    <Button
        android:id="@+id/ButtonAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextViewText"
        android:layout_marginTop="106dp"
        android:layout_toLeftOf="@+id/TextViewText"
        android:text="@string/accept" />

    <Button
        android:id="@+id/ButtonDecline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ButtonAccept"
        android:layout_alignBottom="@+id/ButtonAccept"
        android:layout_toRightOf="@+id/TextViewText"
        android:text="@string/decline" />

</RelativeLayout>